[gd_scene load_steps=3 format=3 uid="uid://ciub0qxee4udh"]

[ext_resource type="Script" path="res://scene/lobby/lobby_browser.gd" id="1_8c7i4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mogwv"]
bg_color = Color(0.384314, 0.396078, 0.423529, 1)

[node name="LobbyBrowser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8c7i4")

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(0.996078, 0.996078, 0.996078, 1)
layout_mode = 2
offset_left = 293.5
offset_top = 253.0
offset_right = 858.5
offset_bottom = 395.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mogwv")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="UserLbl" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Name"

[node name="UserEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Player"

[node name="AddressLbl" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Server"

[node name="AddressEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "127.0.0.1"

[node name="PortLbl" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Port"

[node name="PortEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "8342"

[node name="ConnectBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Connect"

[node name="CreateServerBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Create Server"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ConnectBtn" to="." method="_on_connect_btn_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CreateServerBtn" to="." method="_on_create_server_btn_pressed"]
